--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,4 @@ jobs:
 
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
-         skopeo copy docker://docker.io/ros:humble docker://registry.cn-hangzhou.aliyuncs.com/aliyun1644678433/amd:humble_arm --override-arch=arm64
+         skopeo copy docker://docker.io/hy190776912/snowbot_image:latest docker://registry.cn-hangzhou.aliyuncs.com/aliyun1644678433/amd:hy_ros2
