--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,4 @@ jobs:
 
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
-         skopeo copy docker://docker.io/ros:noetic docker://registry.cn-hangzhou.aliyuncs.com/aliyun1644678433/amd:noetic_arm --override-arch=arm64
+         skopeo copy docker://docker.io/osrf/ros:noetic-desktop-full docker://registry.cn-hangzhou.aliyuncs.com/aliyun1644678433/amd:noetic-desktop-full
